# networkcore_anixops

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TODO.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
apps/ios/: README.md
apps/linux-cli/: Cargo.toml  README.md
apps/linux-cli/src/: lib.rs  main.rs
apps/linux-cli/tests/: linux_cli_contracts.rs
apps/windows-cli/: Cargo.toml  README.md
apps/windows-cli/src/: lib.rs  main.rs  tunnel_sequence_ledger.rs
apps/windows-cli/tests/: windows_cli_contracts.rs
apps/windows-gui/: Cargo.toml
apps/windows-gui/src/: main.rs
apps/windows-gui/src/gui/: commands.rs  instance.rs  runtime_status.rs  shell.rs  startup.rs  theme.rs  tray.rs  ui_state.rs  widgets.rs
apps/windows-gui/src/gui/actions/: connection.rs  mod.rs  nodes.rs
apps/windows-gui/src/gui/pages/: home.rs  settings.rs
apps/windows-service/: Cargo.toml
apps/windows-service/src/: lib.rs  main.rs
apps/windows-service/tests/: managed_runtime_contracts.rs
crates/config-core/: Cargo.toml  README.md
crates/config-core/src/: lib.rs  sdwan_delivery.rs  windows_tunnel.rs
crates/config-core/tests/: config_core_contracts.rs  sdwan_delivery_contracts.rs  windows_tunnel_contracts.rs
crates/control-domain/: Cargo.toml  README.md
crates/control-domain/src/: lib.rs
crates/control-domain/tests/: domain_contracts.rs
crates/control-runtime/: Cargo.toml  README.md
crates/control-runtime/src/: lib.rs
crates/control-runtime/tests/: runtime_contracts.rs
crates/engine-native/: Cargo.toml  README.md
crates/engine-native/src/: lib.rs
crates/engine-native/tests/: engine_native_contracts.rs
crates/engine-singbox/: Cargo.toml  README.md
crates/engine-singbox/src/: lib.rs
crates/engine-singbox/tests/: engine_singbox_contracts.rs
crates/mitm-anixops-sys/: Cargo.toml  README.md  build.rs
crates/mitm-anixops-sys/src/: lib.rs
crates/mitm-policy/: Cargo.toml  README.md
crates/mitm-policy/src/: lib.rs  managed_sdwan.rs
crates/mitm-policy/tests/: managed_sdwan_policy_contracts.rs  mitm_policy_contracts.rs
crates/platform-ios/: Cargo.toml  README.md
crates/platform-ios/src/: lib.rs
crates/platform-ios/tests/: platform_ios_contracts.rs
crates/platform-linux/: Cargo.toml  README.md
crates/platform-linux/src/: lib.rs
crates/platform-linux/tests/: platform_linux_contracts.rs
crates/platform-windows/: Cargo.toml  README.md
crates/platform-windows/src/: lib.rs  managed.rs  system_integration.rs  tunnel_config.rs  tunnel_runtime.rs  tunnel_security.rs
crates/platform-windows/tests/: managed_integration_contracts.rs  platform_windows_contracts.rs  tunnel_config_contracts.rs  tunnel_runtime_contracts.rs  tunnel_security_contracts.rs
docs/: alpha-release-feature-matrix.md  alpha-windows-smoke-test.md  ci-cd-policy.md  manual-intervention.md  release-strategy.md
docs/architecture/: adr-0001-initial-core-stack.md  adr-0002-public-engine-adapter-first.md  control-kernel-domain.md  control-kernel-interfaces.md  control-runtime-orchestration.md  ios-app-review-manual-confirmation-source-contract.md  ios-app-review-privacy-release-readiness-design.md  ios-embedded-runtime-ffi-boundary-design.md  ios-entitlement-provisioning-source-contract.md  ios-mitm-certificate-lifecycle-design.md  ios-network-extension-design.md  ios-package-swift-manifest-only-activation-validation-contract.md  ios-package-swift-source-ownership-activation-preflight-contract.md  ios-platform-adapter-source-contract.md  ios-platform-risk-assessment.md  ios-privacy-manifest-source-contract.md  ios-swift-network-extension-bridge-design.md  ios-swift-xcode-bridge-source-contract.md  ios-swift-xcode-source-tree-activation-preflight-contract.md  ios-testflight-app-store-connect-upload-workflow-source-contract.md  ios-upload-workflow-activation-validation-contract.md  linux-artifact-license-notice-confirmation.md  linux-artifact-pre-release-design.md  linux-cli-artifact-installation-rollback.md  linux-cli-entrypoint.md  linux-cli-runtime-wiring.md  linux-mitm-browser-capture-source-contract.md  linux-mitm-certificate-lifecycle-source-contract.md  linux-mitm-http-rewrite-source-contract.md  linux-native-proxy-engine-start.md  linux-package-archive-staging-contract.md  linux-package-artifact-archive-creation-validation-contract.md  linux-package-artifact-attestation-execution-validation-contract.md  linux-package-artifact-build-command-validation-contract.md  linux-package-artifact-checksum-execution-validation-contract.md  linux-package-artifact-job-preflight-validation-contract.md  linux-package-artifact-manifest-checksum-validation-contract.md  linux-package-artifact-manifest-generation-validation-contract.md  linux-package-artifact-manifest.md  linux-package-artifact-staging-file-validation-contract.md  (+32 more)
docs/superpowers/plans/: 2026-07-19-sdwan-delivery-verifier.md  2026-07-20-windows-easytier-tunnel.md
docs/superpowers/specs/: 2026-07-20-windows-easytier-tunnel-design.md  2026-07-20-windows-tunnel-cleanup-transaction-design.md
installer/windows/: PORTABLE-README.txt  Package.wxs  README.md  default-managed-config.json
testdata/sdwan-delivery-contract/v1/: README.md  client-envelope.json  easytier-client-envelope.json  easytier-manifest.json  easytier-pop-envelope.json  manifest.json  pop-envelope.json
