[workspace]
members = [
    "apps/linux-cli",
    "crates/config-core",
    "crates/control-domain",
    "crates/control-runtime",
    "crates/platform-linux",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AnixOps/networkcore_anixops"
