[workspace]
members = [
    "apps/linux-cli",
    "apps/windows-cli",
    "crates/config-core",
    "crates/control-domain",
    "crates/control-runtime",
    "crates/engine-native",
    "crates/engine-singbox",
    "crates/mitm-anixops-sys",
    "crates/mitm-policy",
    "crates/platform-ios",
    "crates/platform-linux",
    "crates/platform-windows",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AnixOps/networkcore_anixops"
