[package]
name = "networkcore-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Linux CLI entrypoint for the AnixOps network control kernel."

[dependencies]
config-core = { path = "../../crates/config-core" }
control-domain = { path = "../../crates/control-domain" }
control-runtime = { path = "../../crates/control-runtime" }
engine-native = { path = "../../crates/engine-native" }
engine-singbox = { path = "../../crates/engine-singbox" }
platform-linux = { path = "../../crates/platform-linux" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "networkcore-linux"
path = "src/main.rs"
