[package]
name = "networkcore-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows CLI entrypoint for the AnixOps network control kernel."

[dependencies]
config-core = { path = "../../crates/config-core" }
control-domain = { path = "../../crates/control-domain" }
fs2 = "0.4"
platform-windows = { path = "../../crates/platform-windows" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["parsing"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "networkcore-windows"
path = "src/main.rs"
