[package]
name = "networkcore-windows-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Windows GUI client for AnixOps NetworkCore."

[dependencies]
config-core = { path = "../../crates/config-core" }
control-domain = { path = "../../crates/control-domain" }
engine-singbox = { path = "../../crates/engine-singbox" }
platform-windows = { path = "../../crates/platform-windows" }
rcgen = { version = "0.14.8", features = ["x509-parser"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "networkcore-windows-gui"
path = "src/main.rs"
