[package]
name = "networkcore-windows-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows service host for the AnixOps NetworkCore managed client."

[dependencies]
control-domain = { path = "../../crates/control-domain" }
engine-native = { path = "../../crates/engine-native" }
engine-singbox = { path = "../../crates/engine-singbox" }
mitm-policy = { path = "../../crates/mitm-policy" }
networkcore-windows = { path = "../windows-cli" }
platform-windows = { path = "../../crates/platform-windows" }
serde_json = "1"

[dev-dependencies]
rcgen = { version = "0.14.8", features = ["x509-parser"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Services",
] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "networkcore-windows-service"
path = "src/main.rs"
