[package]
name = "engine-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal native proxy engine adapter contracts for the AnixOps network control kernel."

[dependencies]
control-domain = { path = "../control-domain" }
rcgen = { version = "0.14.8", features = ["x509-parser"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webpki-roots = "1.0.8"

[lib]
path = "src/lib.rs"
