[package]
name = "engine-singbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "sing-box public proxy engine adapter contracts for the AnixOps network control kernel."

[dependencies]
control-domain = { path = "../control-domain" }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"

[dev-dependencies]
flate2 = "1"

[lib]
path = "src/lib.rs"
