[package]
name = "mitm-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe mitm_anixops policy adapter for the AnixOps network control kernel."

[dependencies]
control-domain = { path = "../control-domain" }
mitm-anixops-sys = { path = "../mitm-anixops-sys" }

[lib]
path = "src/lib.rs"
