[package]
name = "platform-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows platform capability boundary for the AnixOps network control kernel."

[dependencies]
config-core = { path = "../config-core" }
control-domain = { path = "../control-domain" }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["parsing", "serde"] }
toml = "0.9"

[lib]
path = "src/lib.rs"
