[package]
name = "platform-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows platform capability boundary for the AnixOps network control kernel."

[dependencies]
config-core = { path = "../config-core" }
control-domain = { path = "../control-domain" }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["parsing"] }
toml = "0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Networking_WinHttp",
    "Win32_Networking_WinInet",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

[lib]
path = "src/lib.rs"
